# mydrive-Vault

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
include/daemon/: chunker.hpp  db_manager.hpp  debouncer.hpp  socket_server.hpp  thread_pool.hpp  uploader.hpp  watcher.hpp
include/shared/: config.hpp  hash_utils.hpp
mydrive-web/: package-lock.json  package.json  proxy.ts
mydrive-web/app/: page.tsx
mydrive-web/app/api/auth/login/: route.ts
mydrive-web/app/api/auth/logout/: route.ts
mydrive-web/app/api/auth/register/: route.ts
mydrive-web/app/api/auth/token/: route.ts
mydrive-web/app/api/chunks/check/: route.ts
mydrive-web/app/api/chunks/upload/: route.ts
mydrive-web/app/api/files/: route.ts
mydrive-web/app/api/files/commit/: route.ts
mydrive-web/app/api/files/download/: route.ts
mydrive-web/app/api/files/init/: route.ts
mydrive-web/app/help/: page.tsx
mydrive-web/app/login/: page.tsx
mydrive-web/app/register/: page.tsx
mydrive-web/lib/: db.ts  queue.ts
mydrive-worker/: Dockerfile  package-lock.json  package.json  tsconfig.json
mydrive-worker/lib/: db.ts
mydrive-worker/src/: index.ts
mydrive-worker/src/pipeline/: scanner.ts
src/cli/: main.cpp
src/daemon/: chunker.cpp  db_manager.cpp  debouncer.cpp  main.cpp  socket_server.cpp  uploader.cpp  watcher.cpp
src/shared/: hash_utils.cpp
